--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
     "typeRoots": [
       "node_modules/@types"
     ],
-    "lib": ["es6", "dom"]
+    "lib": ["es6", "dom", "es2015"]
   },
   "exclude": [
     "node_modules"
