--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "angular-bros-socket-backend",
+  "version": "0.2.0",
   "scripts": {
     "prod-push": "git add -A && git commit -m \"updated bundle\" && git push origin master",
     "start": "npm run clean && webpack -p && node bundle/backend.js",
