--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "concurrently": "^3.4.0",
     "express": "^4.12.2",
     "mailgun-js": "^0.10.1",
-    "sequelize": "^3.30.4",
+    "sequelize": "^3.30.1",
     "socket.io": "^1.3.5",
     "source-map-support": "^0.4.14",
     "sqlite3": "^3.1.8"
@@ -22,6 +22,7 @@
     "awesome-typescript-loader": "^3.1.2",
     "typescript": "~2.2.2",
     "webpack": "^2.4.1",
-    "webpack-merge": "^4.1.0"
+    "webpack-merge": "^4.1.0",
+    "webpack-shell-plugin": "^0.5.0"
   }
 }
