--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "angular-bros-socket-backend",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "scripts": {
     "prod-push": "git add -A && git commit -m \"updated bundle\" && git push origin master",
     "start": "npm run clean && webpack -p && node bundle/backend.js",
@@ -8,19 +8,19 @@
   },
   "dependencies": {
     "@types/lodash": "^4.14.62",
-    "@types/sequelize": "^3.4.43",
+    "@types/sequelize": "4.0.51",
     "concurrently": "^3.4.0",
     "express": "^4.12.2",
     "mailgun-js": "^0.10.1",
     "sequelize": "^3.30.1",
     "socket.io": "^1.3.5",
-    "source-map-support": "^0.4.14",
+    "source-map-support": "^0.4.15",
     "sqlite3": "^3.1.8"
   },
   "devDependencies": {
-    "@types/node": "^7.0.5",
-    "awesome-typescript-loader": "^3.1.2",
-    "typescript": "~2.2.2",
+    "@types/node": "^7.0.14",
+    "awesome-typescript-loader": "^3.1.3",
+    "typescript": "~2.3.2",
     "webpack": "^2.4.1",
     "webpack-merge": "^4.1.0",
     "webpack-shell-plugin": "^0.5.0"
