--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "angular-bros-socket-backend",
-  "version": "0.6.1",
+  "version": "0.7.0",
   "scripts": {
     "prod-push": " webpack -p -q git add -A && git commit -m \"updated bundle\" && git push origin master",
     "start": "npm run clean && webpack -p && node bundle/backend.js",
@@ -9,6 +9,7 @@
   "dependencies": {
     "concurrently": "^3.4.0",
     "express": "^4.15.3",
+    "sendgrid": "^5.1.1",
     "sequelize": "^3.30.1",
     "socket.io": "^2.0.2",
     "source-map-support": "^0.4.15",
